Bug 410672 - ""Manage Search Engines..." menu entry is misaligned" [p=dao@mozilla.com (Dão Gottwald) r=Mano a1.9=schrep]

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -60,12 +60,6 @@
   min-height: 26px;
 }
 
-/* ..... fix searchbar "add engine" padding issue ..... */
-
-.searchbar-popup .open-engine-manager { 
-  -moz-padding-start: 4px; 
-}
-
 #searchbar[empty="true"] > .searchbar-textbox {
   color: GrayText;
   direction: ltr !important;
